--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.cdnfonts.com/css/recoleta");
-@import url("https://db.onlinewebfonts.com/c/ebc97170be28755cff0b82be760fb3a6?family=Sonder+Regular");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -65,4 +62,16 @@
     font-family: "Celesse";
     src: url("./assets/Celesse-Regular.woff") format("woff2"),
         url("./assets/Celesse-Regular.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Sonder";
+    src: url("./assets/Sonder-Regular.woff") format("woff2"),
+        url("./assets/Sonder-Regular.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Recoleta";
+    src: url("./assets/Recoleta-Regular.woff") format("woff2"),
+        url("./assets/Recoleta-Regular.woff") format("woff");
 }
